--- a/content/publication/tovvt/cite.bib
+++ b/content/publication/tovvt/cite.bib
@@ -1,8 +1,7 @@
-@article{Warford_Kunda_2018,
+@article{warford2018measuring,
  abstractnote = {Do people have dispositions towards visual or verbal thinking styles, i.e., a tendency towards one default representational modality versus the other? The problem in trying to answer this question is that visual/verbal thinking styles are challenging to measure. Subjective, introspective measures are the most common but often show poor reliability and validity; neuroimaging studies can provide objective evidence but are intrusive and resource-intensive. In previous work, we observed that in order for a purely behavioral testing method to be able to objectively evaluate a person’s visual/verbal thinking style, 1) the task must be solvable equally well using either visual or verbal mental representations, and 2) it must offer a secondary behavioral marker, in addition to primary performance measures, that indicates which modality is being used. We collected four such tasks from the psychology literature and conducted a small pilot study with adult participants to see the extent to which visual/verbal thinking styles can be differentiated using an individual’s results on these tasks.},
  author = {Warford, Noel and Kunda, Maithilee},
  pages = {6},
  title = {Measuring Individual Differences in Visual and Verbal Thinking Styles},
  year = {2018}
 }
-
